--- a/connections-service/src/main/resources/templates/index.html
+++ b/connections-service/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div class="container mt-4">
+	<a th:href="@{/new}" class="btn btn-primary">Nuevo</a>
 		<table class="table">
 			<thead>
 				<tr>
@@ -32,6 +33,10 @@
 					<td th:text="${conexion.active}"></td>
 					<td th:text="${conexion.idType}"></td>
 					<td th:text="${conexion.createdData}"></td>
+					<td>
+					<a class="btn btn-warning">Editar</a>
+					<a class="btn btn-danger">Eliminar</a>
+					</td>
 				</tr>
 			</tbody>
 		</table>
