--- a/connections-service/src/main/resources/templates/index.html
+++ b/connections-service/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 <body>
 	<div class="container mt-4">
 	<a th:href="@{/new}" class="btn btn-primary">Nuevo</a>
+	<p></p>
 		<table class="table">
 			<thead>
 				<tr>
@@ -34,7 +35,7 @@
 					<td th:text="${conexion.idType}"></td>
 					<td th:text="${conexion.createdData}"></td>
 					<td>
-					<a class="btn btn-warning">Editar</a>
+					<a th:href="@{/editar}+${conexion.id}" class="btn btn-warning">Editar</a>
 					<a class="btn btn-danger">Eliminar</a>
 					</td>
 				</tr>
